# vimcode

./: .gitignore  .opignore  AGENTS.md  BUGS.md  CLAUDE.md  COVERAGE_PHASE5.md  Cargo.toml  EXTENSIONS.md  HISTORY.md  LICENSE  PLAN.md  PLAN_ARCHIVE-buttons.md  PLAN_ARCHIVED.md  PLAN_ARCHIVE_actiyitybar.md  PLAN_ARCHIVE_count_repetition.md  PLAN_ARCHIVE_line_numbers_settings.md  PLAN_ARCHIVE_phase3_integration_polish.md  PLAN_ARCHIVE_phase4_preview.md  PLAN_ARCHIVE_preview_tabs.md  PROJECT_STATE.md  README.md  SCROLLBAR_IMPLEMENTATION.md  SESSION_HISTORY.md  VIM_COMPATIBILITY.md  build.rs  opencode.json  win-smoke-tests.md
.claude/commands/: complete-push.md  complete-session.md  make-release.md  plan-next.md  quality-check.md
.claude/skills/: gtk4-rs-master.md  rust-expert.md  rust-gtk-project-conventions.md
.github/workflows/: ci.yml  ci.yml.disabled  release.yml  release.yml.disabled  rust.yml
.opencode/plans/: count-repetition.md
.opencode/skills/gtk4-rs-master/: SKILL.md
.opencode/skills/rust-expert/: SKILL.md
.vimcode/: launch.json
SUMMARIES/: core_modules.md  engine_buffers.md  engine_execute.md  engine_keys.md  engine_mod.md  engine_motions.md  engine_search.md  engine_small_submodules.md  engine_tests.md  engine_visual.md  engine_windows.md  gtk_draw.md  gtk_explorer.md  gtk_helpers.md  gtk_mod.md  render.md  tui_modules.md  win_gui_draw.md  win_gui_mod.md
data/: io.github.jdonaghy.VimCode.desktop  io.github.jdonaghy.VimCode.metainfo.xml
docs/: BACKEND_SETUP_AUDIT.md  NATIVE_GUI_LESSONS.md  PHASE_C_PLAN.md  UI_CRATE_DESIGN.md
docs/archive/: PLAN-mouse-click-fix.md
extensions/: registry.json
extensions/bash/: README.md  manifest.toml
extensions/bicep/: README.md  manifest.toml
extensions/commentary/: README.md  commentary.lua  manifest.toml
extensions/cpp/: README.md  manifest.toml
extensions/csharp/: README.md  manifest.toml
extensions/git-insights/: README.md  blame.lua  manifest.toml
extensions/go/: README.md  manifest.toml
extensions/java/: README.md  manifest.toml
extensions/javascript/: README.md  manifest.toml
extensions/json/: README.md
extensions/markdown/: README.md
extensions/php/: README.md  manifest.toml
extensions/python/: README.md  manifest.toml
extensions/ruby/: README.md  manifest.toml
extensions/rust/: README.md  manifest.toml
extensions/terraform/: README.md
extensions/xml/: README.md
extensions/yaml/: README.md
flatpak/: cargo-sources.json  io.github.jdonaghy.VimCode.yml
kubeui/: Cargo.toml
kubeui-core/: Cargo.toml
kubeui-core/src/: action.rs  k8s.rs  lib.rs  shell.rs  state.rs  view.rs
kubeui-gtk/: Cargo.toml
kubeui-gtk/src/: main.rs
kubeui/src/: main.rs
quadraui/: BACKEND.md  Cargo.toml  README.md
quadraui/docs/: APP_ARCHITECTURE.md  BACKEND.md  BACKEND_TRAIT_PROPOSAL.md  DECISIONS.md  EVENT_ROUTING_TOUR.md  TUI_CONSUMER_TOUR.md  UI_CRATE_DESIGN.md
quadraui/examples/: gtk_app.rs  gtk_demo.rs  tui_app.rs  tui_demo.rs
quadraui/examples/common/: demo.rs  mini_app.rs  mod.rs
quadraui/src/: accelerator.rs  backend.rs  dispatch.rs  event.rs  lib.rs  modal_stack.rs  runner.rs  theme.rs  types.rs
quadraui/src/gtk/: activity_bar.rs  backend.rs  completions.rs  context_menu.rs  dialog.rs  editor.rs  events.rs  find_replace.rs  form.rs  list.rs  message_list.rs  mod.rs  multi_section_view.rs  palette.rs  rich_text_popup.rs  run.rs  scrollbar.rs  services.rs  status_bar.rs  tab_bar.rs  terminal.rs  text_display.rs  tooltip.rs  tree.rs
quadraui/src/primitives/: activity_bar.rs  completions.rs  context_menu.rs  dialog.rs  editor.rs  find_replace.rs  form.rs  list.rs  menu_bar.rs  message_list.rs  mod.rs  modal.rs  multi_section_view.rs  palette.rs  panel.rs  progress.rs  rich_text_popup.rs  scrollbar.rs  spinner.rs  split.rs  status_bar.rs  tab_bar.rs  terminal.rs  text_display.rs  toast.rs  tooltip.rs  tree.rs
quadraui/src/tui/: backend.rs  completions.rs  context_menu.rs  dialog.rs  editor.rs  events.rs  find_replace.rs  form.rs  list.rs  message_list.rs  mod.rs  multi_section_view.rs  palette.rs  rich_text_popup.rs  run.rs  scrollbar.rs  services.rs  status_bar.rs  tab_bar.rs  text_display.rs  tooltip.rs  tree.rs
src/: icons.rs  lib.rs  main.rs  render.rs  tui_bin.rs  tui_main.rs  win_gui_bin.rs
src/core/: ai.rs  buffer.rs  buffer_manager.rs  comment.rs  cursor.rs  dap.rs  dap_manager.rs  engine.rs  extensions.rs  git.rs  lsp.rs  lsp_manager.rs  markdown.rs  mod.rs  mode.rs  paths.rs  plugin.rs  project_search.rs  registry.rs  session.rs  settings.rs  spell.rs  swap.rs  syntax.rs  tab.rs  terminal.rs  view.rs  window.rs
src/core/engine/: accessors.rs  buffers.rs  dap_ops.rs  execute.rs  ext_panel.rs  keys.rs  lsp_ops.rs  mod.rs  motions.rs  panels.rs  picker.rs  plugins.rs  search.rs  source_control.rs  spell_ops.rs  terminal_ops.rs  tests.rs  visual.rs  vscode.rs  windows.rs
src/gtk/: backend.rs  click.rs  css.rs  draw.rs  events.rs  explorer.rs  mod.rs  quadraui_gtk.rs  services.rs  tree.rs  util.rs
src/tui_main/: backend.rs  events.rs  mod.rs  mouse.rs  panels.rs  quadraui_tui.rs  render_impl.rs  services.rs
src/tui_main/snapshots/: command_line.snap  insert_mode.snap  line_numbers.snap  normal_mode.snap  split_panes.snap  visual_selection.snap
src/win_gui/: draw.rs  input.rs  mod.rs  quadraui_win.rs
tests/: accelerator_registry.rs  ai_completions.rs  ai_panel.rs  bracket_matching.rs  breadcrumbs.rs  command_mode.rs  commentary.rs  context_menu.rs  ex_commands.rs  ext_panel.rs  extensions.rs  formatting.rs  ide_polish.rs  keymaps_editor.rs  markdown_preview.rs  netrw.rs  new_vim_features.rs  normal_mode.rs  nvim_conformance.rs  operator_motions.rs  paste_insert.rs  search.rs  search_highlight.rs  semantic_tokens.rs  settings_panel.rs  swap_recovery.rs  tab_drag.rs  tab_switcher.rs  terminal_maximize.rs  user_keymaps.rs  vim_compat_batch.rs  vim_compat_batch2.rs  vim_compat_batch3.rs  vim_compat_batch4.rs  vim_features.rs  visual_mode.rs  vscode_mode.rs  wildmenu.rs  wincmd.rs  z_commands.rs
tests/common/: mod.rs
