[package]
name = "vimcode"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.7", features = ["v4_10"] }
relm4 = "0.7"
pangocairo = "0.18"
ropey = "1.6.1"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-go = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c = "0.20"
tree-sitter-typescript = "0.20"
# TODO: tree-sitter-html (0.20.4 depends on tree-sitter 0.22, incompatible with our 0.20.x stack)
tree-sitter-css = "0.20"
tree-sitter-json = "0.20"
tree-sitter-bash = "0.20"
tree-sitter-ruby = "0.20"
tree-sitter-c-sharp = "0.20"
tree-sitter-java = "0.20"
tree-sitter-toml = "0.20"
# TODO: tree-sitter-lua (no 0.20.x release on crates.io)
# TODO: tree-sitter-kotlin (no 0.20.x release on crates.io)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gio = "0.17"
ratatui = "0.27"
ignore = "0.4"
regex = "1"
lsp-types = "0.97"
copypasta-ext = "0.4"
portable-pty = "0.8"
vt100 = "0.15"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
