[package]
name = "vimcode"
version = "0.1.0"
edition = "2021"
description = "Vim-like code editor with GTK4 and tree-sitter"
license = "MIT"

[package.metadata.deb]
maintainer = "VimCode contributors"
copyright = "2024-2026, VimCode contributors"
extended-description = "VimCode is a Vim-inspired code editor built with GTK4, featuring tree-sitter syntax highlighting, LSP support, and a built-in terminal."
# GTK4 runtime libs — apt will install these if missing when the user runs `sudo apt -f install`
depends = "libgtk-4-1 (>= 4.10), libglib2.0-0 (>= 2.68), libpango-1.0-0, libcairo2, libgdk-pixbuf-2.0-0, libgraphene-1.0-0"
section = "editors"
priority = "optional"
assets = [
  ["target/release/vimcode", "usr/bin/vimcode", "755"],
]

[lib]
name = "vimcode_core"
path = "src/lib.rs"

[[bin]]
name = "vimcode"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.7", features = ["v4_10"] }
relm4 = "0.7"
pangocairo = "0.18"
ropey = "1.6.1"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-go = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c = "0.20"
tree-sitter-typescript = "0.20"
# TODO: tree-sitter-html (0.20.4 depends on tree-sitter 0.22, incompatible with our 0.20.x stack)
tree-sitter-css = "0.20"
tree-sitter-json = "0.20"
tree-sitter-bash = "0.20"
tree-sitter-ruby = "0.20"
tree-sitter-c-sharp = "0.20"
tree-sitter-java = "0.20"
tree-sitter-toml = "0.20"
# TODO: tree-sitter-lua (no 0.20.x release on crates.io)
# TODO: tree-sitter-kotlin (no 0.20.x release on crates.io)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gio = "0.17"
ratatui = "0.27"
ignore = "0.4"
regex = "1"
lsp-types = "0.97"
copypasta-ext = "0.4"
portable-pty = "0.8"
vt100 = "0.15"
mlua = { version = "0.9", features = ["lua54", "vendored"] }

# Optimize dependencies in dev builds — GTK/Relm4/Cairo/Pango FFI calls and
# Tree-sitter parsing are 10-50× slower without optimization, causing visible
# GUI sluggishness during development.  Our own code stays at opt-level 0 for
# fast compilation and good debuginfo.
[profile.dev.package."*"]
opt-level = 2
