[package]
name = "vimcode"
version = "0.4.1"
edition = "2021"
description = "Vim-like code editor with GTK4 and tree-sitter"
license = "MIT"

[package.metadata.deb]
maintainer = "VimCode contributors"
copyright = "2024-2026, VimCode contributors"
extended-description = "VimCode is a Vim-inspired code editor built with GTK4, featuring tree-sitter syntax highlighting, LSP support, and a built-in terminal."
# GTK4 runtime libs — apt will install these if missing when the user runs `sudo apt -f install`
depends = "libgtk-4-1 (>= 4.10), libglib2.0-0 (>= 2.68), libpango-1.0-0, libcairo2, libgdk-pixbuf-2.0-0, libgraphene-1.0-0"
section = "editors"
priority = "optional"
assets = [
  ["target/release/vimcode", "usr/bin/vimcode", "755"],
  ["data/io.github.jdonaghy.VimCode.desktop", "usr/share/applications/io.github.jdonaghy.VimCode.desktop", "644"],
  ["data/icons/io.github.jdonaghy.VimCode.svg", "usr/share/icons/hicolor/scalable/apps/io.github.jdonaghy.VimCode.svg", "644"],
]

[lib]
name = "vimcode_core"
path = "src/lib.rs"

[[bin]]
name = "vimcode"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "vcd"
path = "src/tui_bin.rs"

[features]
default = ["gui"]
gui = ["gtk4", "relm4", "pangocairo", "gio"]

[dependencies]
gtk4 = { version = "0.7", features = ["v4_10"], optional = true }
relm4 = { version = "0.7", optional = true }
pangocairo = { version = "0.18", optional = true }
ropey = "1.6.1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-lua = "0.5"
tree-sitter-md = "0.5"
tree-sitter-language = "0.1"
# tree-sitter-latex: vendored from latex-lsp/tree-sitter-latex v0.3.0 (language version 14)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gio = { version = "0.17", optional = true }
ratatui = "0.27"
ignore = "0.4"
regex = "1"
lsp-types = "0.97"
copypasta-ext = "0.4"
portable-pty = "0.8"
vt100 = "0.15"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
toml = "0.8"
libc = "0.2"
pulldown-cmark = { version = "0.13", default-features = false }
streaming-iterator = "0.1.9"
spellbook = "0.4.0"

[build-dependencies]
cc = "1.0"

# Optimize dependencies in dev builds — GTK/Relm4/Cairo/Pango FFI calls and
# Tree-sitter parsing are 10-50× slower without optimization, causing visible
# GUI sluggishness during development.  Our own code stays at opt-level 0 for
# fast compilation and good debuginfo.
[profile.dev.package."*"]
opt-level = 2
