[package]
name = "quadraui"
version = "0.1.0"
edition = "2021"
description = "Cross-platform UI primitives with native Windows, Linux, macOS, and TUI rendering backends"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JDonaghy/vimcode"
publish = false

[lib]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
# For runnable examples that demonstrate the TUI backend pattern.
# Examples: `cargo run --example tui_demo`
ratatui = "0.29"
crossterm = "0.29"

[[example]]
name = "tui_demo"
path = "examples/tui_demo.rs"
