[package]
name = "quadraui"
version = "0.1.0"
edition = "2021"
description = "Cross-platform UI primitives with native Windows, Linux, macOS, and TUI rendering backends"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JDonaghy/vimcode"
publish = false

[lib]

[features]
# Public TUI rasterisers in `quadraui::tui`. Pulls in ratatui.
tui = ["dep:ratatui"]

# Public GTK rasterisers in `quadraui::gtk`. Pulls in gtk4 + pangocairo.
gtk = ["dep:gtk4", "dep:pangocairo"]

# Legacy alias kept so `cargo run --example gtk_demo --features gtk-example`
# keeps working. The example doesn't import `quadraui::gtk` itself, but the
# feature pulls in the GTK deps the example needs.
gtk-example = ["gtk"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# Optional — pulled in by the `gtk` / `gtk-example` features.
gtk4 = { version = "0.7", features = ["v4_10"], optional = true }
pangocairo = { version = "0.18", optional = true }
# Optional — pulled in by the `tui` feature.
ratatui = { version = "0.29", optional = true }

[dev-dependencies]
serde_json = "1.0"
# For runnable examples that demonstrate the TUI backend pattern.
crossterm = "0.29"

[[example]]
name = "tui_demo"
path = "examples/tui_demo.rs"
required-features = ["tui"]

[[example]]
name = "gtk_demo"
path = "examples/gtk_demo.rs"
required-features = ["gtk-example"]
